--- a/index.html
+++ b/index.html
@@ -459,7 +459,19 @@
     </section>
     <h3 id="ContactScroll">Our Contacts</h3>
     <footer>
-     
+         <div class="login-box">
+              <h1>Receive a call</h1>
+                <div class="textbox">
+                    <i class="fas fa-user"></i>
+                    <input type="text" placeholder="Your Name">
+                </div>
+
+                 <div class="textbox">
+                    <i class="fas fa-lock"></i>
+                    <input type="text" placeholder="Your phone number">
+                </div>
+              <input type="button" class="btn" value="Receive">
+        </div>
     </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
