--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#MenuScroll">Menu</a></li>
                     <li><a href="#ReviewsScroll">Reviews</a></li>
                     <li><a href="#DeliveryP">Delivery</a></li>
+                    <li><a href="#offices">Offices</a></li>
                     <li><a href="#ContactScroll">Contact</a></li>
                 </ul>
             </nav>
@@ -58,7 +59,6 @@
                     <h3>QUALITY</h3>
                     <p>FRESH</p>
                     <p>PERFECT</p>
-                    <p>CHEAP</p>
                 </li>
             </ul>
         </section>
@@ -376,9 +376,9 @@
     </section>
 
     <section id="ReviewsSect">
-            <h3 id="ReviewsScroll">Reviews!</h3>
-            <h2>We helped many people</h2>
-            <h2>Better take a look of their opinions about us.</h2>
+        <h3 id="ReviewsScroll">Reviews!</h3>
+        <h2>We helped many people</h2>
+        <h2>Better take a look of their opinions about us.</h2>
     </section>
 
     <section id="Reviews">
@@ -443,30 +443,29 @@
                 <img src="assets/img/money.png" alt="X" />
                 <h3>Payment</h3>
                 <p>You may pay via</p>
-                <h3>Credit Card</h3>
-                <h3>Cash</h3>
-                <h3>₿</h3>
+                <p>Credit Card</p>
+                <p>Cash or ₿itcoin</p>
             </li>
 
             <li>
                 <img src="assets/img/truck.png" alt="X" />
                 <h3>Delivery</h3>
                 <p>We deliver everyday.</p>
-                <h3>25/24</h3>
+                <p>25/24</p>
             </li>
 
             <li>
                 <img src="assets/img/box.png" alt="X" />
                 <h3>Package</h3>
-                <p>Our boxes keeps food warm and fresh.</p>
-                <h3>1 HOUR!</h3>
+                <p>Our boxes keeps food warm and fresh.We care about our quality.</p>
             </li>
         </ul>
     </section>
+
     <h3 id="ContactScroll">Our Contacts</h3>
-    <footer>
+    <section>
          <div class="login-box">
-              <h1>Receive a call</h1>
+              <h2>Receive a call</h2>
                 <div class="textbox">
                     <i class="fas fa-user"></i>
                     <input type="text" placeholder="Your Name">
@@ -478,6 +477,60 @@
                 </div>
               <input type="button" class="btn" value="Receive">
         </div>
+    </section>
+
+    <h3 id="offices">Our Offices</h3>
+
+    <section id="location-office">
+        <ul class="parent-location">
+            <li>
+                <img src="assets/img/location.png" alt="X">
+                <h2>Moldova, Balti</h2>
+                <p>Strada Puskin 666/1</p>
+                <p>068886661</p>
+            </li>
+            <li>
+                <img src="assets/img/location.png" alt="X">
+                <h2>Moldova, Balti</h2>
+                <p>Strada Independentei 666/2</p>
+                <p>068886662</p>
+            </li>
+            <li>
+                <img src="assets/img/location.png" alt="X">
+                <h2>Moldova, Chisinau</h2>
+                <p>Strada Ciuflea 666/3</p>
+                <p>068886663</p>
+            </li>
+        </ul>
+    </section>
+
+    <footer> 
+        <ul>
+            <li>
+                <h2>About our restaurant</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam laborum sunt labore nobis tempora, fugiat quam iste ea deserunt eveniet, veniam obcaecati <mark>doloremque</mark> adipisci reiciendis dignissimos ab. Doloremque, sapiente, <mark>voluptatibus.</mark></p>
+            </li>
+            <li>
+                <h2>Latest news</h2>
+                <p><mark>The new burgers available</mark></p>
+                <p><mark>New restaurant near you</mark></p>
+                <p><mark>Pizza discount 30%!</mark></p>
+            </li>
+            <li>
+                <h2>Our MasterChefs</h2>
+                <p><mark>Lorem Ipsum</mark></p>
+                <p><mark>Lorem Ipsum</mark></p>
+                <p><mark>Lorem Ipsum</mark></p>
+                <p><mark>Lorem Ipsum</mark></p>
+            </li>
+            <li>
+                <h2>We also deliver</h2>
+                <p><mark>Flowers with champagne</mark></p>
+                <p><mark>Toys for kids</mark></p>
+                <p><mark>Market-Food</mark></p>
+                <p><mark>HouseHold Items</mark></p>
+            </li>
+        </ul>
     </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
