--- a/index.html
+++ b/index.html
@@ -466,20 +466,20 @@
     </ul>
 </section>
 
-<h3 id="ContactScroll">Our Contacts</h3>
+<h3 id="ContactScroll">Contact</h3>
 <section>
     <div class="login-box">
-        <h2>Receive a call</h2>
+        <h2>Receive a call from us</h2>
         <div class="textbox">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Your Name" id="name">
         </div>
 
         <div class="textbox">
             <i class="fas fa-lock"></i>
-            <input type="text" placeholder="Your phone number">
+            <input type="text" placeholder="Your phone number" id="number">
         </div>
-        <input type="button" class="btn" value="Receive">
+        <input type="button" class="btn" value="Receive" id="send">
     </div>
 </section>
 
